# one-coder

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  docker-compose.yaml  manage.sh
.github/workflows/: deploy.yaml  deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: dc32f089e43c_autogenerated.py
backend/src/: __init__.py
backend/src/one_coder_api/: __init__.py
backend/src/one_coder_api/common/: constants.py
backend/src/one_coder_api/custom_route/: __init__.py  custom_route.py
backend/src/one_coder_api/locales/: messages.pot
backend/src/one_coder_api/locales/en/LC_MESSAGES/: messages.po
backend/src/one_coder_api/locales/ja/LC_MESSAGES/: messages.po
backend/src/one_coder_api/models/: __init__.py  category_model.py  post_model.py
backend/src/one_coder_api/routers/: category_router.py  post_router.py
backend/src/one_coder_api/schemas/: category_schema.py  post_schema.py
backend/src/one_coder_api/services/: category_service.py  post_service.py
frontend/: Dockerfile  components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: robots.txt  rss.xml  sitemap.xml
frontend/src/: App.tsx  box.tsx  index.css  main.tsx
frontend/src/common/: constants.ts
frontend/src/common/components/atoms/: cursor.tsx  mouse-stalker.tsx
frontend/src/locales/: configs.ts  en.json  ja.json
frontend/src/styles/: fonts.css  post-page.css  posts.css
resources/config/: default.conf  ssl.conf
(+20 files in other folders)
